tests/baselines/reference/Protected3.errors.txt
tests/cases/conformance/parser/ecmascript5/Protected/Protected3.ts(2,3): error TS1089: 'protected' modifier cannot appear on a constructor declaration.


==== tests/cases/conformance/parser/ecmascript5/Protected/Protected3.ts (1 errors) ====
    class C {
      protected constructor() { }
      ~~~~~~~~~
!!! error TS1089: 'protected' modifier cannot appear on a constructor declaration.
    }